# COMiC

./: .gitignore  CMakeLists.txt  CONTRIBUTE.md  build.gradle.kts  exports.def  main.java  run.c  run.cpp  settings.gradle.kts  version_test.c
.github/workflows/: build.yml
Include/: COMiC.h
Include/COMiC/: types.h  version.h
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/com/github/minecraft_comic/buildSrc/: CStaticLibNode.kt  CStaticLibraryConfigureScope.kt  CStaticLibraryPlugin.kt  Shortcuts.kt
include/: COMiC.h
include/COMiC/: compression.hpp  core.h  core.hpp  crypto.hpp  error.h  io.hpp  math.hpp  network.h  network.hpp  os.h  rb_tree.h  rb_tree.hpp  types.h  util.h  util.hpp  version.h  world.h
include/COMiC/core/: arena.h  arena.hpp  bit_array.h  bit_array.hpp  doubly_linked_list.h  doubly_linked_list.hpp  error.h  linked_memory.h  ordered_rb_tree.h  ordered_rb_tree.hpp  os.h  rb_tree.h  rb_tree.hpp  test.h  types.h  types.hpp
libs/core/: CMakeLists.txt
libs/core/include/COMiC/: core.h
libs/core/src/: application.c
libs/gui/: build.gradle.kts
libs/network/src/main/c/: main.c  network.h
libs/network/src/main/c/packet/: sender.h
libs/network/src/main/c/platform-dependent/windows/: network_windows.h
libs/network/src/main/c/util/rsa/: rsa.h
libs/os/: CMakeLists.txt
libs/os/include/COMiC/: os.h
libs/os/windows/: CMakeLists.txt
libs/os/windows/include/COMiC/: _os.h
libs/os/windows/src/: error.c  error.h  heap.c
libs/util/: CMakeLists.txt
libs/util/include/COMiC/: error.h  types.h  version.h
libs/util/src/: error.c
net/: main.py  netty_types.py  packets.py
os/: CMakeLists.txt
os/linux/: CMakeLists.txt
os/linux/include/COMiC/: _os.h
os/linux/include/COMiC/core/: _os.h
os/linux/network/: network.c  network.cpp  network.h  network.hpp
os/windows/: CMakeLists.txt
os/windows/include/COMiC/: _os.h
os/windows/include/COMiC/core/: _os.h
os/windows/src/: error.c  error.h  heap.c  lock.c  mem.c  sentinel.cpp  thread.c
os/windows/src/network/: network.c  network.cpp  network.h  network.hpp
src/: application.c  chunk.c  chunk_extra_buffer.c  chunk_extra_buffer.cpp  chunk_extra_buffer.h  compression.cpp  config.cpp  error.c  error.cpp  global_heap.c  io.cpp  lib.c  lib.def  rb_tree.c  rb_tree_pointers.cpp  single_buffer.c  test.c  test.cpp  test_main.c  validate_type_sizes.cpp  validate_version.cpp  version.cpp
src/crypto/: crypto.cpp  digests.cpp  encryption.cpp
src/network/: CMakeLists.txt  buffer.c  buffer.cpp  buffer.h  main.c  main.h  network.h  network_constants.h  receiver.c  receiver.cpp  sender.c  sender.cpp
src/network/buffer/: buffer.c  buffer.h
src/network/packet/: receiver.c  receiver.h  sender.c  sender.h
src/network/platform-dependent/: platform.h
src/network/platform-dependent/linux/: network_linux.c  network_linux.h
src/network/platform-dependent/windows/: network_windows.c  network_windows.h
src/network/util/rsa/: rsa.c
src/util/: aes.cpp  juuid.c  md5.c  md5.cpp  rsa.c  sha1.cpp  util.h  uuid.cpp
src/util/juuid/: juuid.c  juuid.h
src/util/rsa/: rsa.c  rsa.h
test/: CMakeLists.txt
test/src/: doubly_linked_list.cpp  main.c  registry.h
