set(COMiC_COMMON_OS_HEADER_DIR include)

message(STATUS "Searching for operating system API")
if (EXISTS COMiC::OS)
    message(STATUS "Using external API")
else ()
    if (WIN32)
        message(STATUS "Using default Windows API")
        add_subdirectory(windows)
    elseif (UNIX AND NOT APPLE)
        message(STATUS "Using default Linux API")
        add_subdirectory(linux)
    elseif (APPLE)
        message(FATAL_ERROR "Apple support? No thanks.")
    else()
        message(FATAL_ERROR "Unsupported operating system")
    endif ()
endif ()